user: update route implemented
cookie parser used to access value from cookies

custom handleFileUpload route implemented
