# routes/v1/User.ts
@@ -1,9 +1,16 @@
 import express, { Request, Response } from "express";
 import bcrypt from "bcrypt";
 import jwt from "jsonwebtoken";
-import { signinUser, signupUser, verifyUserEmail } from "@/controllers/v1/User";
+import { signinUser, signupUser, updateUser, verifyUserEmail } from "@/controllers/v1/User";
+import { verifyToken } from "@/utils/middleware";
+import multer from "multer";
 
-
+//multer config
+const upload = multer({
+    storage: multer.memoryStorage(),
+  });
+  
+  
 
 const router = express.Router();
 
@@ -14,8 +21,13 @@ router.post("/signin",signinUser);
 //read
 
 //update
+router.put("/updateuser", verifyToken,upload.fields([
+    { name: "profileImg", maxCount: 1 },
+    { name: "resume", maxCount: 1 },
+  ]), updateUser);
 
 //delete
+// router.delete("/:id", verifyToken, deleteUser);
 
 //verifyEmail
 router.post("/verifyemail", verifyUserEmail);
